Revert "Beta version commit. v0.1"
This reverts commit bbfad013d7b7ba5d2ad6ee4dc235231e0ec8f6bb.

--- a/doc/supercell_man.tex
+++ b/doc/supercell_man.tex
@@ -129,7 +129,7 @@ Using the \Opt{-L} option, \LaTeX\ ouput can be produced, instead of
       An argument of the option is the average number of structures to be stored on disk. If the total number of structures it too high to be stored you can specify the option with a positive argument to switch the random picked algorithm. On each stage the new structure generated the algorithm will accept the structure with probability p=\OptArg{}{count}/total-number-of-combination. So, the output structures distribution can be described with binomial distribution F(k, p, count). If you are using the algorithm with merge algorithm \OptArg{-m}{} this algorithm will run first. 
       
 \item[\OptArg{-o }{output-prefix}, \OptArg{--output=}{output-prefix}]
-      The options specify output file name prefix. The prefix can contain folder name but the folder should be created before run the program. For example, --output=myfolder/myfiles. The output files will be created according to templates. Fon non merging run the template will be <output-prefix>\_ind<index>.cif. For merging run the template will be <output-prefix>\_ind<index>\_w<weight>.cif, where <weight> - number of the structures merged to the structure. Be careful, all existing files with mask "<output-prefix>*.cif" will be deleted during not dry-run.
+      The options specify output file name prefix. The prefix can contain folder name but the folder should be created before run the program. For example, --output=myfolder/myfiles. The output files will be created according to templates. Fon non merging run the template will be <output-prefix>\_ind<index>.cif. Fon merging run the template will be <output-prefix>\_ind<index>\_w<weight>.cif, where <weight> - number of the structures merged to the structure.
 
 \end{Description}
 
