Small changes in doc.

--- a/doc/supercell_man.tex
+++ b/doc/supercell_man.tex
@@ -50,7 +50,7 @@
 
 \section{Description}
 %%%%%%%%%%%%%%%%%%%%%
-\Prog{supercell} ... 
+\Prog{supercell} ... Some description here ...
 
 \section{Options}
 %%%%%%%%%%%%%%%%%
