Formal charges excluded. Some possible errors fixed with cppcheck .

--- a/doc/supercell_man.tex
+++ b/doc/supercell_man.tex
@@ -76,9 +76,8 @@
       The option helps you to charge balance the system. Be careful, charge balancing with wrong input charges will make output system composition far from desired or it can freeze the program. The possible arguments are
       \begin{itemize}
          \item[no]   No charge balancing. The option will set all charges to zero.
-         \item[try]  Default. Try to charge balance system, if all charges known and initial system is not charged.
-         \item[yes]  Check input file first for charges, if not exists use formal one.
-         \item[form] Experimental. Formal charges from internal \Prog{openbabel} database. Current version of \Prog{openbabel} provides charges only for few elements. 
+         \item[try]  Default. Try to charge balance system, if initial system is not charged.
+         \item[yes]  Charge balance the system.
       \end{itemize}
 
 \item[\OptArg{-p }{labels-properties}, \OptArg{--property=}{labels-properties}]
