--- a/doc/supercell_man.tex
+++ b/doc/supercell_man.tex
@@ -159,11 +159,8 @@ Version: \Version\ of \Date.
 \item[Copyright] 
      All rights to the program belongs to authors.
 
-
 \item[License] This program can be redistributed and/or modified under the
-     terms of the LaTeX Project Public License Distributed from CTAN archives
-     in directory \File{macros/latex/base/lppl.txt}; either version 1 of the
-     License, or any later version.
+     terms of the GNU GNU GENERAL PUBLIC LICENSE Version 2.
 
 \item[Misc]
      The actual version of  \Prog{supercell} may be found on my homepage\\
