--- a/doc/supercell_man.tex
+++ b/doc/supercell_man.tex
@@ -107,7 +107,27 @@
       The option allows you significantly decrease the number of output structures. Applying the option you will switch on merge algorithm, which will merge structures with the same set of distances between sites with specific label. Be careful, the algorithm requires all unique structures to be stored in memory (usually 10\Circum 4 - 10\Circum 5 unique structures per 1Gb RAM). Also the algorithm can decrease the speed. For cases with more than 10\Circum 4 of  total combination it is recommended to treat execution of \Prog{supercell} using verbosity level 2 or higher.
 
 \item[\OptArg{-n }{count}, \OptArg{--store-structures=}{count}]
-      An argument of the option is the average number of structures to be stored on disk. If the total number of structures it too high to be stored you can specify the option with a positive argument to switch the random picked algorithm. On each stage the new structure generated the algorithm will accept the structure with probability p=\OptArg{}{count}/total-number-of-combination. So, the output structures distribution can be described with binomial distribution F(k, p, count). If you are using the algorithm with merge algorithm \OptArg{-m}{} this algorithm will run first. 
+      
+      %@% IF !NFIX %@%
+
+      %@% IF NOTHING %@%
+        %workaround to skip macro when do latex2man      
+        \ifx \NFix \undefined
+      %@% END-IF %@%        
+      
+        The argument of the option is the average number of structures to be stored on disk. If the total number of structures it too high to be stored you can specify the option with a positive argument to switch the random picked algorithm. On each stage the new structure generated the algorithm will accept the structure with probability p=\OptArg{}{count}/total-number-of-combination. So, the output structures distribution can be described with binomial distribution F(k, p, count). If you are using the algorithm with merge algorithm \OptArg{-m}{} this algorithm will run first. 
+      
+      %@% IF NOTHING %@%        
+      \else
+      %@% END-IF %@%
+      
+      %@% ELSE %@%
+        The argument of the option is the average number of structures to be stored on disk. If the total number of structures it too high to be stored you can specify the option with a positive argument to switch the random picked algorithm.
+      %@% END-IF %@%
+      
+      %@% IF NOTHING %@%      
+      \fi
+      %@% END-IF %@%              
       
 \item[\OptArg{-o }{output-prefix}, \OptArg{--output=}{output-prefix}]
       The options specify output file name prefix. The prefix can contain folder name but the folder should be created before run the program. For example, --output=myfolder/myfiles. The output files will be created according to templates. Fon non merging run the template will be <output-prefix>\_ind<index>.cif. For merging run the template will be <output-prefix>\_ind<index>\_w<weight>.cif, where <weight> - number of the structures merged to the structure. Be careful, all existing files with mask "<output-prefix>*.cif" will be deleted during not dry-run.
