--- a/doc/supercell_man.tex
+++ b/doc/supercell_man.tex
@@ -125,7 +125,7 @@
       %@% END-IF %@%
       
 \item[\Opt{-q }, \Opt{-$ $-coloumb-energy}] 
-      The option enable Coloumb energy calculations. The result energies for each structures are stored in file $<$output-prefix$>$\_coloumb\_energy.txt. The energies can help to consider the relevant regular structures for following calculations. The summation goes only in real space with large cut-off distance (9 period of supercell unit vectors), so it is not so accurate it absolute value, but should give a resonable relative values for low energies configurations. Be careful, in case of charged cell the energy values can be meanless. 
+      The option enable Coloumb energy calculations. The result energies for each structures are stored in file $<$output-prefix$>$\_coloumb\_energy.txt. The energies can help to consider the relevant regular structures for following calculations. Ewald summation algorithm is used for the calculations. Be careful, in case of charged cell the energy values can be meanless. 
       
 \item[\OptArg{-o }{output-prefix}, \OptArg{-$ $-output=}{output-prefix}]
       The options specify output file name prefix. The prefix can contain folder name but the folder should be created before run the program. For example, -$ $-output=myfolder/myfiles. The output files will be created according to templates. Fon non merging run the template will be <output-prefix>\_ind<index>.cif. For merging run the template will be $<$output-prefix$>$\_ind$<$index$>$\_w$<$weight$>$.cif, where $<$weight$>$ - number of the structures merged to the structure. Be careful, all existing files with mask "$<$output-prefix$>$*.cif" will be deleted during not dry-run.
